# tiny-transformer-mech-interp

./: LICENSE  README.md  dummy.py  pyproject.toml
artifacts/exp_0/: probes_agg.json
artifacts/exp_1/: probes_agg.json
artifacts/exp_2/: probes_agg.json
artifacts/exp_3/: probes_agg.json
checkpoints/: baseline.pt
mech_viz/exp_0_viz_seed_0/: attn_all.pt  probes_single.json  seq.pt
mech_viz/exp_1_viz_seed_0/: attn_all.pt  probes_single.json
mech_viz/exp_2_viz_seed_0/: attn_all.pt  probes_single.json  seq.pt
mech_viz/exp_3_viz_seed_0/: attn_all.pt  probes_single.json  seq.pt
src/: config.py  data.py  eval.py  mech_interp.py  model.py  seed_utils.py  train.py  viz.py
wandb/run-20260301_194206-mbhfetdo/: run-mbhfetdo.wandb
wandb/run-20260302_200315-ixl0ssv9/: run-ixl0ssv9.wandb
wandb/run-20260302_200920-s9jpuac9/: run-s9jpuac9.wandb
wandb/run-20260303_144520-nbt7fsxq/: run-nbt7fsxq.wandb
wandb/run-20260303_151257-q6i1m9xk/: run-q6i1m9xk.wandb
wandb/run-20260303_152709-hkmqe4yz/: run-hkmqe4yz.wandb
wandb/run-20260303_152915-eq58a2o2/: run-eq58a2o2.wandb
wandb/run-20260303_171944-r9rgeltd/: run-r9rgeltd.wandb
wandb/run-20260303_172224-0ccsn368/: run-0ccsn368.wandb
wandb/run-20260303_172544-yyu1e0h5/: run-yyu1e0h5.wandb
wandb/run-20260303_180047-rfvnc5op/: run-rfvnc5op.wandb
wandb/run-20260303_180337-k44qedn5/: run-k44qedn5.wandb
wandb/run-20260303_210239-xgwe77te/: run-xgwe77te.wandb
wandb/run-20260304_180416-lr70fbpy/: run-lr70fbpy.wandb
wandb/run-20260305_135747-nrw9as9u/: run-nrw9as9u.wandb
(+66 files in other folders)
